--- a/index.html
+++ b/index.html
@@ -215,8 +215,10 @@
 <!-- Anime.js (REQUIRED for animations) -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 <!-- Scripts -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script> -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script> -->
+<script src="./bg-animation.js"></script>
+
   
   <!-- Panel Toggler Script -->
   <script>
@@ -235,3 +237,4 @@
 
 </body>
 </html>
+
